@@ -1,8 +1,8 @@
 Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
-Version: 1.5.4
-Date: 2021-09-02
+Version: 1.5.5
+Date: 2022-10-18
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
@@ -22,7 +22,8 @@ Imports:
     MASS,
     Brobdingnag,
     doRNG,
-    rlang
+    rlang,
+    raster
 LinkingTo: Rcpp, RcppArmadillo
 Suggests:
     testthat,
@@ -30,7 +31,6 @@ Suggests:
     splines, 
     splines2 (>= 0.2.8),
     R.rsp,
-    raster,
     conicfit,
     ggplot2,
     ggmap,
@@ -53,7 +53,7 @@ Suggests:
     prodlim,
     nleqslv,
     qdapRegex
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.1
 Encoding: UTF-8
 NeedsCompilation: yes
 VignetteBuilder: R.rsp
