@@ -136,6 +136,12 @@ importFrom(graphics,title)
 importFrom(mvtnorm,pmvnorm)
 importFrom(mvtnorm,rmvnorm)
 importFrom(numDeriv,grad)
+importFrom(raster,cellFromXY)
+importFrom(raster,getValues)
+importFrom(raster,getZ)
+importFrom(raster,is.factor)
+importFrom(raster,levels)
+importFrom(raster,rasterToPoints)
 importFrom(rlang,list2)
 importFrom(sp,CRS)
 importFrom(sp,coordinates)
